--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,7 +11,7 @@ identidock:
         - redis
 
 dnmonster:
-    image: amouat/dnmonster:1.0
+    image: ketayon/dnmonster:1.0
 
 redis:
     image: redis:3.0
